--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -9,6 +9,11 @@ spec:
   selector:
     matchLabels:
       app: my-diplom-app
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 33%
   template:
     metadata:
       labels:
